--- a/tbd/templates/tbd/testresult.html
+++ b/tbd/templates/tbd/testresult.html
@@ -1,6 +1,6 @@
-{% extends 'tbd/base.html' %}
+﻿{% extends 'tbd/base.html' %}
 {% block title %}TestResult - SBD{% endblock %}
-{% block nav_crash_attr %}class="active"{% endblock %}
+{% block nav_testresult_attr %}class="active"{% endblock %}
 
 {% block content %}
     <div class="container">
