--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -22,9 +22,11 @@
                     <ul class="nav nav-tabs" contenteditable="false">
                         <li {% block nav_home_attr %}{% endblock %}><a href="{% url 'tbd_home' %}">Home</a></li>
                         <li {% block nav_project_attr %}{% endblock %}><a href="{% url 'tbd_project' %}">Project</a></li>
+                        <li {% block nav_testaction_attr %}{% endblock %}><a href="{% url 'tbd_testaction' %}">TestAction</a></li>
                         <li {% block nav_build_attr %}{% endblock %}><a href="{% url 'tbd_build' %}">Build</a></li>
                         <li {% block nav_host_attr %}{% endblock %}><a href="{% url 'tbd_host' %}">Host</a></li>
                         <li {% block nav_testcase_attr %}{% endblock %}><a href="{% url 'tbd_testcase' %}">TestCase</a></li>
+                        <li {% block nav_testresult_attr %}{% endblock %}><a href="{% url 'tbd_testresult' %}">TestResult</a></li>
                         <li {% block nav_crash_attr %}{% endblock %}><a href="{% url 'tbd_crash' %}">Crash</a></li>
                         <li class="disabled"><a href="#">To-Do</a></li>
                         <li class="dropdown pull-right">
