display total test actions in project

--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -109,6 +109,7 @@
                     edit: false
                 },
                 build_test_hours: {
+                    defaultValue: 0,
                     title: 'Test Hours',
                     width: '10%'
                 },
