--- a/tbd/templates/tbd/testcase.html
+++ b/tbd/templates/tbd/testcase.html
@@ -80,6 +80,7 @@
                 testcase_platform: {
                     title: 'Test Platform',
                     width: '25%',
+                    defaultValue: '',
                     type: 'radiobutton',
                     options: {{ testcase_platform_choice | safe }}
                 },
