--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -52,43 +52,57 @@
                     values: { 'false': 'False', 'true': 'True' },
                     defaultValue: 'false'
                 },
+                testaction_num: {
+                    title: 'Actions',
+                    width: '8%',
+                    display: function(data) {
+                        console.log(data);
+                        if ('testaction_num' in data.record) {
+                            var testaction_num = data.record.testaction_num;
+                            var prj_id = data.record.prj_id;
+                            return '<a href="{% url "tbd_testaction" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + testaction_num + '</span></a>';
+                        }
+                        return 0;
+                    },
+                    create: false
+                },
                 build_num: {
-                    title: 'Total Builds',
-                    width: '10%',
+                    title: 'Builds',
+                    width: '8%',
                     display: function(data) {
                         console.log(data);
                         if ('build_num' in data.record) {
                             var build_num = data.record.build_num;
                             var prj_id = data.record.prj_id;
-                            return '<a href="{% url "tbd_build" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + build_num + ' builds</span></a>';
+                            return '<a href="{% url "tbd_build" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + build_num + '</span></a>';
                         }
                         return 0;
                     },
                     create: false
                 },
                 host_num: {
-                    title: 'Total Hosts',
-                    width: '10%',
+                    title: 'Hosts',
+                    width: '7%',
                     display: function(data) {
                         console.log(data);
-                        if ('build_num' in data.record) {
+                        if ('host_num' in data.record) {
                             var host_num = data.record.host_num;
                             var prj_id = data.record.prj_id;
-                            return '<a href="{% url "tbd_host" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + host_num + ' hosts</span></a>';
+                            return '<a href="{% url "tbd_host" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + host_num + '</span></a>';
                         }
                         return 0;
                     },
                     create: false
                 },
                 testcase_num: {
-                    title: 'Total Cases',
-                    width: '10%',
+                    title: 'Cases',
+                    width: '7%',
                     display: function(data) {
                         console.log(data);
-                        if ('build_num' in data.record) {
+                        if ('testcase_num' in data.record) {
                             var testcase_num = data.record.testcase_num;
                             var prj_id = data.record.prj_id;
-                            return '<a href="{% url "tbd_testcase" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + testcase_num + ' tc</span></a>';
+                            return '<a href="{% url "tbd_testcase" %}?prj_id=' + prj_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + testcase_num + '</span></a>';
                         }
                         return 0;
                     },
