delete original extra code and use get to instead of filter and support testresult create and list

--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -59,7 +59,8 @@
                         }
                         return 0;
                     },
-                    create: false
+                    create: false,
+                    edit: false
                 },
                 build_num: {
                     title: 'Builds',
@@ -73,7 +74,8 @@
                         }
                         return 0;
                     },
-                    create: false
+                    create: false,
+                    edit: false
                 },
                 host_num: {
                     title: 'Hosts',
@@ -87,7 +89,8 @@
                         }
                         return 0;
                     },
-                    create: false
+                    create: false,
+                    edit: false
                 },
                 testcase_num: {
                     title: 'Cases',
@@ -101,12 +104,14 @@
                         }
                         return 0;
                     },
-                    create: false
+                    create: false,
+                    edit: false
                 },
                 create_time: {
                     title: 'Create Time',
                     width: '20%',
-                    create: false
+                    create: false,
+                    edit: false
                 }
             }
         });
