add default func and support default ta and testresult list accumulated

--- a/tbd/templates/tbd/testresult.html
+++ b/tbd/templates/tbd/testresult.html
@@ -188,11 +188,13 @@
                 },
                 testresult_pass_count: {
                     title: 'Pass',
-                    width: '10%'
+                    width: '10%',
+                    defaultValue: 0
                 },
                 testresult_fail_count: {
                     title: 'Fail',
-                    width: '10%'
+                    width: '10%',
+                    defaultValue: 0
                 },
                 last_update: {
                     title: 'Update Time',
