adjust running and project display column

--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -87,7 +87,7 @@
                     list: false
                 },
                 total_devices: {
-                    title: 'Devices',
+                    title: 'Dev',
                     width: '5%'
                 },
                 total_hours: {
@@ -123,15 +123,14 @@
                     edit: false,
                     create: false
                 },
-                cs_date: {
-                    title: 'CS Date',
-                    width: '10%',
-                    type: 'date',
-                    displayFormat: 'yy/mm/dd'
+                build_create: {
+                    title: 'Build Start',
+                    width: '15%',
+                    edit: false
                 },
                 last_crash: {
                     title: 'Last Crash',
-                    width: '20%',
+                    width: '15%',
                     edit: false
                 }
             }
