change name from SBD to CBD

--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}Build - SBD{% endblock %}
+{% block title %}Build{% endblock %}
 {% block nav_build_attr %}class="active"{% endblock %}
 
 {% block content %}
