--- a/tbd/templates/tbd/crash.html
+++ b/tbd/templates/tbd/crash.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}Crash - SBD{% endblock %}
+{% block title %}Crash{% endblock %}
 {% block nav_crash_attr %}class="active"{% endblock %}
 
 {% block content %}
