--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}SnS Big Data{% endblock %}
+{% block title %}Central Big Data{% endblock %}
 {% block nav_home_attr %}class="active"{% endblock %}
 
 {% block content %}
