--- a/tbd/templates/tbd/host.html
+++ b/tbd/templates/tbd/host.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}Build - SBD{% endblock %}
+{% block title %}Host{% endblock %}
 {% block nav_host_attr %}class="active"{% endblock %}
 
 {% block content %}
