--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}Project - SBD{% endblock %}
+{% block title %}Project{% endblock %}
 {% block nav_project_attr %}class="active"{% endblock %}
 
 {% block content %}
