--- a/tbd/templates/tbd/testaction.html
+++ b/tbd/templates/tbd/testaction.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}TestAction - SBD{% endblock %}
+{% block title %}TestAction{% endblock %}
 {% block nav_testaction_attr %}class="active"{% endblock %}
 
 {% block content %}
