--- a/tbd/templates/tbd/testcase.html
+++ b/tbd/templates/tbd/testcase.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}TestCase - SBD{% endblock %}
+{% block title %}TestCase{% endblock %}
 {% block nav_testcase_attr %}class="active"{% endblock %}
 
 {% block content %}
