--- a/tbd/templates/tbd/testresult.html
+++ b/tbd/templates/tbd/testresult.html
@@ -1,5 +1,5 @@
 ﻿{% extends 'tbd/base.html' %}
-{% block title %}TestResult - SBD{% endblock %}
+{% block title %}TestResult{% endblock %}
 {% block nav_testresult_attr %}class="active"{% endblock %}
 
 {% block content %}
