--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>{% block title %}No title{% endblock %}</title>
+        <title>{% block title %}No title{% endblock %} - CBD</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/bootstrap-select.min.css" rel="stylesheet">
         <link href="/static/css/jquery-ui.min.css" rel="stylesheet">
