--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -89,14 +89,14 @@
                     defaultValue: 'false'
                 },
                 crash_num: {
-                    title: 'Total Crash',
+                    title: 'Crashes',
                     width: '15%',
                     display: function(data) {
                         console.log(data);
                         if ('crash_num' in data.record) {
                             var crash_num = data.record.crash_num;
                             var build_id = data.record.build_id;
-                            return '<a href="{% url "tbd_crash" %}?build_id=' + build_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + ' crashes</span></a>';
+                            return '<a href="{% url "tbd_crash" %}?build_id=' + build_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + '</span></a>';
                         }
                         return 0;
                     },
