--- a/tbd/templates/tbd/testcase.html
+++ b/tbd/templates/tbd/testcase.html
@@ -80,7 +80,7 @@
                     options: {{ testcase_platform_choice | safe }}
                 },
                 crash_num: {
-                    title: 'Total Crash',
+                    title: 'Crashes',
                     width: '25%',
                     display: function(data) {
                         console.log(data);
@@ -88,7 +88,7 @@
                             var crash_num = data.record.crash_num;
                             var url = "{% url "tbd_crash" %}?{% if build %}build_id={{ build.id }}{% elif project %}prj_id={{ project.id }}{% endif %}";
                             url = url + "&testcase_id=" + data.record.testcase_id;
-                            return '<a href="' + url + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + ' crashes</span></a>';
+                            return '<a href="' + url + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + '</span></a>';
                         }
                         return 0;
                     },
