--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -7,6 +7,8 @@
         <title>{% block title %}No title{% endblock %} - CBD</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/bootstrap-select.min.css" rel="stylesheet">
+        <link href="/static/css/jquery.treetable.css" rel="stylesheet">
+        <link href="/static/css/jquery.treetable.theme.default.css" rel="stylesheet">
         <link href="/static/css/jquery-ui.min.css" rel="stylesheet">
         <link href="/static/css/jtable/themes/lightcolor/gray/jtable.min.css" rel="stylesheet"/>
         <link href="/static/tbd/css/user_style.css" rel="stylesheet">
@@ -31,6 +33,7 @@
                         <li {% block nav_testcase_attr %}{% endblock %}><a href="{% url 'tbd_testcase' %}">TestCase</a></li>
                         <li {% block nav_testresult_attr %}{% endblock %}><a href="{% url 'tbd_testresult' %}">TestResult</a></li>
                         <li {% block nav_crash_attr %}{% endblock %}><a href="{% url 'tbd_crash' %}">Crash</a></li>
+						<li {% block nav_utility_attr %}{% endblock %}><a href="{% url 'tbd_utility' %}">Utility</a></li>
                         <li class="disabled"><a href="#">To-Do</a></li>
                         <li class="dropdown pull-right">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">
@@ -56,6 +59,7 @@
 <!--        <script src="/static/js/jquery.bootstrap.min.js"></script>-->
         <script src="/static/js/jquery.tabledit.min.js"></script>
         <script src="/static/js/jquery.jtable.min.js"></script>
+        <script src="/static/js/jquery.treetable.js"></script>
         <script src="/static/tbd/js/user_js.js"></script>
         
         {% block user_js %}{% endblock %}
