support query issue from celery and display result by treetable

--- a/tbd/static/tbd/css/user_style.css
+++ b/tbd/static/tbd/css/user_style.css
@@ -11,6 +11,12 @@
         display:none;
     }
     
+    input.disabled {
+        border: 1px solid #DDD;
+        background-color: #F5F5F5;
+        color:#ACA899;
+    }
+
     div.filtering {
         margin-bottom: 5px;
         border: 1px solid #999;
