--- a/tbd/static/tbd/css/user_style.css
+++ b/tbd/static/tbd/css/user_style.css
@@ -23,4 +23,29 @@
         padding: 10px;
         background-color: #EEE;
     }
+    
+    div.container {
+        padding-top: 1em;
+    }
+    
+    div.box {
+        border: none;
+        margin: 0 0 2em 0;
+        padding: 0;
+    }
+    div.box h5 {
+        background: #e6e6e6;
+        border: 1px solid #aaaaaa;
+        width: 50%;
+        padding: 1px;
+        margin: 0;
+        text-align: center;
+        border-style: solid solid none solid;
+        font-size: 1em;
+    }
+    div.box div.body {
+        background: transparent;
+        border: 1px solid #aaaaaa;
+        padding: 1em;
+    }
 }
